Fixed link to the example

--- a/presentations/react-hooks/body.html
+++ b/presentations/react-hooks/body.html
@@ -127,7 +127,7 @@
   <section>
     <h3>
       For more advanced cases you might want to look into useReducer
-      <a about="_blank" href="./code/useReducer.tsx"></a> hook
+      <a about="_blank" href="https://raw.githubusercontent.com/Drag13/react-learning-course-short/master/presentations/react-hooks/code/useReducer.tsx"></a> hook
     </h3>
   </section>
 </section>
