--- a/presentations/react-components/body.html
+++ b/presentations/react-components/body.html
@@ -508,7 +508,7 @@ const AppBtn: FC&lt;BtnProps&gt; = ({ text, onClick }) =&gt; (
     <ul>
       <li>ComponentDidMount for one time actions like fetching the server</li>
       <li class="fragment fade-up">ComponentDidUpdate for side effect</li>
-      <li class="fragment fade-up">ComponentDidUnmount for cleanup</li>
+      <li class="fragment fade-up">ComponentWillUnmount for cleanup</li>
     </ul>
   </section>
 
