--- a/presentations/react-intro/body.html
+++ b/presentations/react-intro/body.html
@@ -198,7 +198,7 @@ form.insertAdjacentElement('afterbegin', header);
     </section>
 
     <section>
-        <h3>Within imperative approach you simply describe the result</h3>
+        <h3>Within declarative approach you simply describe the result</h3>
 
         <p class="left">Declarative approach is much more readable</p>
     </section>
