--- a/presentations/solid/index.html
+++ b/presentations/solid/index.html
@@ -65,7 +65,7 @@
             <li class="fragment fade-up">Keep your code simple</li>
             <li class="fragment fade-up">Don't hardcode</li>
             <li class="fragment fade-up">Don't change to the code unpredictable</li>
-            <li class="fragment fade-up">Take only needed</li>
+            <li class="fragment fade-up">Ask only needed</li>
             <li class="fragment fade-up">Don't hardcode (yea, again)</li>
           </ul>
         </section>
